--- a/tango-cli/Cargo.toml
+++ b/tango-cli/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
-pretty_env_logger = "0.5"
+daemonize = "0.5"
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+tango-control = { path = "../tango-control", features = [
+    "client",
+], default-features = false }
