--- a/tango/Cargo.toml
+++ b/tango/Cargo.toml
@@ -15,3 +15,6 @@ tokio = { version = "1", features = ["full"] }
 toml = "0.8"
 
 tango-config = { path = "../tango-config" }
+tango-control = { path = "../tango-control", features = [
+    "server",
+], default-features = false }
