--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,27 @@
-[workspace]
-resolver = "2"
-members = [
-    "./tango",
-    "./tango-cli",
-    "./tango-config",
-    "tango-config",
-    "tango-control",
-]
+[package]
+name = "tango"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+anyhow = "1"
+axum = "0.7"
+bincode = "1"
+clap = { version = "4", features = ["derive"] }
+daemonize = "0.5"
+futures = "0.3"
+once_cell = "1"
+pretty_env_logger = "0.5"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+socket2 = "0.5"
+tarpc = { version = "0.34", features = [
+    "tokio1",
+    "serde-transport",
+    "serde-transport-bincode",
+    "tcp",
+    "unix",
+] }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
