--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,23 +5,27 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-axum = "0.7"
 bincode = "1"
 clap = { version = "4", features = ["derive"] }
 daemonize = "0.5"
 futures = "0.3"
+http-body-util = "0.1"
+hyper = { version = "1", features = ["full"] }
+hyper-util = { version = "0.1", features = ["full"] }
 once_cell = "1"
-pretty_env_logger = "0.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 socket2 = "0.5"
-tarpc = { version = "0.34", features = [
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
+
+[dependencies.tarpc]
+version = "0.34"
+features = [
     "tokio1",
     "serde-transport",
     "serde-transport-bincode",
     "tcp",
     "unix",
-] }
-tokio = { version = "1", features = ["full"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
+]
